# jupyter-docx-bundler

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  azure-pipelines.yml  environment.yml  matplotlibrc  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.py  test_requirements.txt
.azure-templates/: conda-build.yml  conda.yml  matrix.yml  python-version.yml  test.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  continuous-integration.yml
conda.recipe/: meta.yaml  run_test.py
jupyter_docx_bundler/: __init__.py  converters.py  pandoc_filter.py
jupyter_docx_bundler/test/: conftest.py  test_bundler.py  test_converters.py
jupyter_docx_bundler/tests/: conftest.py  test_bundler.py  test_converters.py
tests/: test_converters.py
